objects/tffa__Asset__c.object
<CustomObject>
    <description>An asset is a resource with economic value that an individual, corporation or country owns or controls with the expectation that it will provide future benefit. Assets are reported on a company&apos;s balance sheet, and they are bought or created to increase the value of a firm or benefit the firm&apos;s operations. Assets can be broadly categorized into short-term (or current) assets, fixed assets, financial investments and intangible assets. Read more: &lt;a href=&quot;http://www.investopedia.com/terms/a/asset.asp&quot;&gt; Asset &lt;/a&gt;</description>
    <fields>
        <fullName>tffa__AccountNumber__c</fullName>
        <description>Existing account number of the party</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Real estate address</description>
        <label>Address</label>
        <referenceTo>tffa__Address__c</referenceTo>
        <relationshipLabel>Real Estates</relationshipLabel>
        <relationshipName>RealEstates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>tffa__AgeOfConstruction__c</fullName>
        <description>Indicates age in years of the real estate owned by party</description>
        <label>Age of construction</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__AgreementValue__c</fullName>
        <description>Total agreement value of real estate asset</description>
        <label>Agreement value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__Balance__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount balance of the account</description>
        <label>Account Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__CommercialDesignatorType__c</fullName>
        <description>A value from a MISMO prescribed list that specifies a further level of detail for a street address, for example, Suite or Unit. Captured for Commercial property.</description>
        <label>Commercial designator type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CommercialPropertyDesignatorType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__CommercialUsageType__c</fullName>
        <description>Specifies the intended usage of the property by the borrower.</description>
        <label>Commercial usage type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__CommercialOccupancyType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DesignatorType__c</fullName>
        <description>A value from a MISMO prescribed list that specifies a further level of detail for a street address, for example, Suite or Unit. This list is based on the USPS Publication 28 on Postal Addressing Standards with the addition of Condo based on mortgage industry need.</description>
        <label>Designator type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PropertyDesignatorType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__DispositionStatusType__c</fullName>
        <description>A value from a MISMO prescribed list that specifies the intended disposition of an owned real property.</description>
        <label>Disposition status type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__DispositionStatusType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__EstimatedValue__c</fullName>
        <description>Total estimated value of the real estate asset</description>
        <label>Estimated value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__ExchangeVehicleMake__c</fullName>
        <description>Make of the exchange vehicle</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Exchange vehicle make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExchangeVehicleMarketValue__c</fullName>
        <description>Current market value of the exchange vehicle as per valuation</description>
        <label>Exchange vehicle market value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__ExchangeVehicleModel__c</fullName>
        <description>Model of the exchange vehicle</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Exchange vehicle model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ExchangeVehicleMonthlyPayment__c</fullName>
        <description>The expected monthly outgoing to service this liability</description>
        <label>Exchange vehicle monthly payment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__ExchangeVehicleOutstandingBalance__c</fullName>
        <description>The outstanding principal amount on the loan</description>
        <label>Exchange vehicle outstanding balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__ExchangeVehicleType__c</fullName>
        <description>Type of the exchange vehicle. Values can be car, heavy goods vehicle, commercial vehicle etc</description>
        <label>Exchange vehicle type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__VehicleType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ExchangeVehicleYear__c</fullName>
        <description>Manufacturing year of the exchange vehicle</description>
        <label>Exchange vehicle year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__ExistingMortgage__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates existing mortgage on the property</description>
        <label>Existing mortgage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__ExternalId__c</fullName>
        <description>External id as referred by external system</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>tffa__ExternalReferenceId__c</fullName>
        <description>The reference ID of the property from external system which has provided property details result.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>External reference id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__FinancialInstitution__c</fullName>
        <description>Name of the financial institution in which account is held</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial institution</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__GiftAssetType__c</fullName>
        <description>A value that specifies financial assets in a mortgage loan transaction. Assets may be either liquid or fixed and are associated with a corresponding asset amount.</description>
        <label>Gift asset type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__GiftAssetType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__GiftSourceType__c</fullName>
        <description>A value that specifies the party providing the associated funds.</description>
        <label>Gift source type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__GiftSourceType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__HasAddOnVehicle__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if the vehicle being purchase or refinanced has add on vehicle</description>
        <label>Has add on vehicle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__HasInsurance__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether insurance details are to be captured for the asset</description>
        <label>Has Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__HasVehicleCustomizations__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if the vehicle being purchase or refinanced has third party customizations</description>
        <label>Has vehicle customizations</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__HousingExpenseType__c</fullName>
        <description>A value from a MISMO prescribed list that specifies the housing expense items listed in a mortgage loan transaction.</description>
        <label>Housing expense type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__HousingExpenseType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__IncludedInAssetIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, indicates that item is included in the value of an asset account being reported by a borrower.</description>
        <label>Included in asset indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsDeleted__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the object is marked for delete.</description>
        <label>Is Deleted?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsExchangeVehicleCaptured__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if exchange vehicle information is captured</description>
        <label>Is exchange vehicle captured</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsExcludedFromAssetReport__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if the this asset needs to be excluded from Plaid Asset Report.</description>
        <label>Is Exclude From Asset Report?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsVehicleSelected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether vehicle is already selected before applying</description>
        <inlineHelpText>Whether vehicle is already selected before applying</inlineHelpText>
        <label>Vehicle Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__IsVehicleUsed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether vehicle is used one</description>
        <label>Used Vehicle</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__MarketValue__c</fullName>
        <description>Total amount of market value of the current asset</description>
        <label>Market value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MaskedAccountNumber__c</fullName>
        <description>Last 4 digits of account numner for display purposes</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Masked Account Number</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__MonthlyExpense__c</fullName>
        <description>Total monthly expenses being incurred for the real estate asset. They can be against property taxes, maintenance expenses etc.</description>
        <label>Monthly expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MonthlyHousingExpense__c</fullName>
        <description>The total monthly amount for insurance, property taxes, association dues and other housing expenses on the owned real property.</description>
        <label>Monthly housing expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MonthlyRentalIncome__c</fullName>
        <description>Total montly rental income amount from the real estate</description>
        <label>Monthly rental income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__MortgageAmount__c</fullName>
        <description>Total mortgage amount on existing real estate asset</description>
        <label>MortgageAmount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__NetRentalIncome__c</fullName>
        <description>Net rental income from the current real estate</description>
        <label>Net rental income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__NumberOfMortgages__c</fullName>
        <description>Number of existing mortgages of real estate asset</description>
        <label>NumberOfMortgages</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__OccupancyPercentage__c</fullName>
        <description>The percentage of the rentable area of such Property occupied by bona fide tenants of such Property or leased by tenants pursuant to bona fide tenant Leases.</description>
        <label>Occupancy percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__One__c</fullName>
        <description>Power of One, Useful for reporting</description>
        <formula>1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Power of One, Useful for reporting</inlineHelpText>
        <label>One</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Owned__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether current real estate is owned by the party</description>
        <label>Owned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__Party__c</fullName>
        <description>Reference to parent party</description>
        <label>Party</label>
        <referenceTo>tffa__Party__c</referenceTo>
        <relationshipLabel>Assets</relationshipLabel>
        <relationshipName>Assets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>tffa__ProductCategory__c</fullName>
        <description>Different product category supported by system. This classifies the flow of account opening , the underlying data model and the servicing components about an account.</description>
        <label>Product Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__ProductCategory</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__ProductCode__c</fullName>
        <description>Unique product code maintained in the system</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Product Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__ProductName__c</fullName>
        <description>Product name provided by core banking</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Product Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Proposed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if the captured asset is a proposed one as part of the current lending application</description>
        <label>Proposed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__SortOrder__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Controls the relative order of the item in a list.</description>
        <label>Sort Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__SourceSystemId__c</fullName>
        <description>The source system id</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source System Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Source__c</fullName>
        <description>The source/provider for this asset if it sourced from a external system.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__Type__c</fullName>
        <description>Type of asset held by the party applying for financial product.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__AssetType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__UsageType__c</fullName>
        <description>A value from a MISMO prescribed list that specifies the intended usage of the property by the borrower.</description>
        <label>Usage type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__PropertyUsageType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__UsedAsCollateral__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the current asset is used as collateral in lending application</description>
        <label>Used As Collateral</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__VehicleAdditionalDetails__c</fullName>
        <description>Captures additional details for the selected vehicle such as color, no fo cylinders and other specs.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle Additional Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__VehicleIdentifier__c</fullName>
        <description>Vehicle Identification Number maintained for the specific model.Vehicle Unique Identification Number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__VehicleMSRPValue__c</fullName>
        <description>MSRP stands for the Manufacturer Suggested Retail Price which is a recommended selling price that automakers give a new car</description>
        <label>Vehicle MSRP value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__VehicleMake__c</fullName>
        <description>Make of the vehicle</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle make</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__VehicleMileage__c</fullName>
        <description>Total mileage of the vehicle if loan is being applied for used vehicle</description>
        <label>Vehicle mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__VehicleModel__c</fullName>
        <description>Model of the vehicle</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__VehicleRegionCode__c</fullName>
        <description>Region/state from which the vehicle data is to be fetched</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle region code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__VehicleRetailValue__c</fullName>
        <description>The retail value of a car is the average price a car dealer would sell it for.</description>
        <label>Vehicle retail value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>tffa__VehicleSubModel__c</fullName>
        <description>Sub Model of the vehicle</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vehicle sub model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tffa__VehicleType__c</fullName>
        <description>Type of the vehicle. Values can be car, heavy goods vehicle, commercial vehicle etc.</description>
        <label>Vehicle type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__VehicleType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__VehicleUsageType__c</fullName>
        <description>Indicates the usage type of the vehicle being purchased or refinanced</description>
        <label>Vehicle usage type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>tffa__VehicleUsageType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>tffa__VehicleUseAsResidence__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True, if the vehicle in the collateral arrangement will be used as a residence by the applicant</description>
        <label>Vehicle use as residence</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>tffa__VehicleYear__c</fullName>
        <description>Manufacturing year of the vehicle</description>
        <label>Vehicle year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>tffa__Vin__c</fullName>
        <description>The car&apos;s vehicle identification number (VIN) is the identifying code for a SPECIFIC automobile. The VIN serves as the car&apos;s fingerprint, as no two vehicles in operation have the same VIN. A VIN is composed of 17 characters (digits and capital letters) that act as a unique identifier for the vehicle. A VIN displays the car&apos;s unique features, specifications and manufacturer. The VIN can be used to track recalls, registrations, warranty claims, thefts and insurance coverage.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Vin</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Financial Asset</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Financial Asset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Financial Assets</pluralLabel>
    <recordTypes>
        <fullName>tffa__BANK_DEPOSIT</fullName>
        <active>true</active>
        <description>Financial asset owned by the party in the form of Bank Deposit</description>
        <label>Bank Deposit</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__REAL_ESTATE</fullName>
        <active>true</active>
        <description>Financial asset owned by the party in the form of real estate</description>
        <label>Real Estate</label>
    </recordTypes>
    <recordTypes>
        <fullName>tffa__VEHICLE</fullName>
        <active>true</active>
        <description>Financial asset owned by the party in the form of vehicle</description>
        <label>Vehicle</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>